k8s/data-sync/00-data-sync-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "data-sync"
  labels:
    name: "data-sync"
