k8s/data-sync/01-influxdb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: data-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  serviceName: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7.12-alpine
          ports:
            - containerPort: 8086
              name: influxdb
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: data-sync
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1G
