k8s/data-sync/03-postgis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgis
  namespace: data-sync
spec:
  selector:
    matchLabels:
      app: postgis
  serviceName: postgis
  replicas: 1
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
        - name: postgis
          image: postgis/postgis:latest
          ports:
            - containerPort: 5432
              name: postgis-port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
