k8s/data-sync/02-influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: data-sync
spec:
  ports:
    - port: 8086
      name: influxdb
      targetPort: 8086
  selector:
    app: influxdb
  type: ClusterIP
