k8s/data-sync/02-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: data-sync
spec:
  ports:
    - port: 5432
      name: postgres
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
