k8s/data-sync/04-ms-data-sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-data-sync
  namespace: data-sync
spec:
  selector:
    app: ms-data-sync
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
  type: LoadBalancer
