k8s/data-sync/04-postgis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgis
  namespace: data-sync
spec:
  ports:
    - port: 5432
      name: postgis
      targetPort: 5432
  selector:
    app: postgis
  type: ClusterIP
