k8s/data-sync/05-ms-data-sync-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-sync-ingress
  namespace: data-sync
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: dsync.udite.com
      http:
        paths:
          - backend:
              service:
                name: ms-data-sync
                port:
                  number: 5002
            path: /
            pathType: Prefix
